styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Montserrat';
}

nav {
    background-color: #F8F8F8;
    display: flex;
    justify-content: space-around;
    padding: 4rem 0;
}

nav div {
    cursor: default;
}

nav div h1 {
    font-size: 33px;
    color: #143774;
}

nav div p {
    margin-top: 4px;
    color: #1792D2;
    font-size: 12px;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 2.4px;
}

nav>ul {
    display: flex;
    align-items: center;
}

nav ul li {
    list-style-type: none;
    margin: 0 1.5rem;
    font-weight: bold;
    font-size: 16px;
    letter-spacing: 3.2px;
    text-transform: uppercase;
    cursor: pointer;
    padding-bottom: 2px;
}

nav ul li:hover {
    border-bottom: 2px solid #717171;
    padding-bottom: 0;
}

a {
    text-decoration: none;
    color: #717171;
}


/* Main */
main {
    margin: 3rem 8rem;
    display: flex;
    flex-direction: row;
}

main div section {
    width: 714px;
}

.life-img {
    width: 714px;
}

.date-and-comments {
    color: #707070;
    margin: 26px 0;
    font-size: 14px;
}

section h3 {
    color: #143774;
    font-size: 24px;
    letter-spacing: 4.8px;
    margin-bottom: 1rem;
}

p.explanation {
    font-size: 18px;
    color: #707070;
    margin-bottom: 1rem;
}

.inline-text {
    color: #1792D2;
    text-decoration: underline;
    cursor: pointer;
}

.continue-reading {
    color: #1792D2;
    letter-spacing: 2.8px;
    font-size: 14px;
    text-transform: uppercase;
    font-weight: bold;
    cursor: pointer;
}


/* Seperator */
hr {
    margin-top: 2rem;
    border: 1px solid #707070;
    width: 714px;
}


/* Post */
.post {
    width: 714px;
    margin-top: 2rem;
    display: flex;
    flex-direction: row;
}

.img-container {
    width: 198px;
    height: 242px;
    background-size: cover;
    background-position: center;
}

#life {
    background-image: url(./images/life.jpg);
}

#food {
    background-image: url(./images/food.jpg);
}

#work {
    background-image: url(./images/work.jpg);
}

#deco {
    background-image: url(./images/deco.jpg);
    background-position: left;
}

.post-img {
    width: 198px;
}

.post-right-section {
    margin-left: 27px;
}

.post-title {
    color: #143774;
    font-size: 24px;
    font-weight: bold;
}

.post-text {
    margin: 2rem 0;
    color: #707070;
    font-size: 18px;
}


/* Right side */
.right {
    margin-left: 51px;
}

.card-border {
    border: 20px solid #EBEBEB;
    margin-bottom: 45px;
}

.card,
.post-card {
    padding: 42px 45px;
}

.card-title {
    color: #143774;
    font-size: 18px;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 3.6px;
}

.card-img {
    width: 150px;
    height: 133px;
    margin-top: 17px;
    margin-bottom: 28px;
}

.card-text {
    width: 162px;
    color: #143774;
    font-size: 14px;
}


/* Recent posts */
.post-card-img {
    width: 150px;
    height: 87px;
    margin-top: 17px;
    margin-bottom: 10px;
}

.post-card-text {
    color: #143774;
    font-size: 18px;
    width: 162px;
}

.card-seperator {
    border: 1px solid #707070;
    width: 150px;
    margin: 0;
    margin-left: 45px;
    margin-right: 0;
}


/* Footer */
footer {
    background-color: #143774;
    padding: 60px 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

footer p {
    color: #fff;
    opacity: 0.8;
}

.copyright {
    opacity: 0.54;
    font-size: 14px;
}


/* Media queries */
@media screen and (max-width: 1200px) {
    main {
        flex-direction: column;
        align-items: center;
    }

    .right {
        margin: 1rem 0 0 0;
    }

    /* About me */
    .card-border {
        width: 714px;
    }

    .card-img {
        width: 100%;
        height: 275px;
        object-fit: cover;
    }

    .card-text,
    .post-card-text {
        font-size: 20px;
        width: 100%;
    }

    /* Recent posts */
    .post-card-img {
        width: 100%;
        height: 275px;
        object-fit: cover;
    }

    .card-seperator {
        display: none;
    }
}

@media screen and (max-width: 900px) {
    nav {
        flex-direction: column;
        align-items: center;
        padding: 4rem 0;
    }

    nav div {
        cursor: default;
        margin-bottom: 40px;
    }
}

@media screen and (max-width: 740px) {
    nav>ul {
        flex-direction: column;
    }

    nav ul li {
        margin: 1rem 0;
    }

    main {
        margin: 0 2rem;
    }

    main div,
    main div section,
    hr,
    .life-img,
    .post-left-section,
    .img-container {
        width: 100%;
    }

    .post {
        width: 100%;
        flex-direction: column;
    }

    .post-right-section {
        margin-left: 0;
        margin-bottom: 4rem;
    }

    .post {
        flex-direction: column;
    }

    /* Right section */
    .right,
    .card-border {
        width: 100%;
    }
}


/* about.html */
.about-img {
    width: 714px;
    height: 308px;
    object-fit: cover;
    margin-bottom: 2rem;
}

.heading-par {
    color: #1792D2;
    font-size: 21px;
    margin-bottom: 1rem;
    margin-top: 2rem;
    font-weight: bold;
}

